# ur-state-manager

./: .gitignore  README.md
src/ur_arm_manager/: package.xml  setup.cfg  setup.py
src/ur_arm_manager/launch/: ur_arm_manager.launch.py
src/ur_arm_manager/ur_arm_manager/: arm_manager.py
src/ur_state_manager/: package.xml  setup.cfg  setup.py
src/ur_state_manager/config/: extra_controllers.yaml
src/ur_state_manager/launch/: arm_controllers.launch.py  ur_state_manager.launch.py
src/ur_state_manager/ur_state_manager/: controller_mode_manager.py  state_manager.py
